src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_List__c</fullName>
        <label>Country List</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <externalId>true</externalId>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <externalId>true</externalId>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fresher</fullName>
                </value>
                <value>
                    <fullName>Junior</fullName>
                </value>
                <value>
                    <fullName>Senior</fullName>
                </value>
                <value>
                    <fullName>Leader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scores__c</fullName>
        <label>Scores</label>
        <summarizedField>Student_Scoring_Skill__c.Points__c</summarizedField>
        <summaryForeignKey>Student_Scoring_Skill__c.Student_ID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Skill_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Disabled</fullName>
                </value>
                <value>
                    <fullName>Graduated</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Student Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Birthday_Minimum</fullName>
        <active>true</active>
        <description>Candidates age should be greater than 16</description>
        <errorConditionFormula>NOT(AND(  
      ISBLANK(Birthday__c),
      ((YEAR(TODAY()) - YEAR(Birthday__c)) &lt; 16)
))</errorConditionFormula>
        <errorMessage>Candidates age should be greater than 16</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Digit_Check</fullName>
        <active>true</active>
        <description>Phone should contains only digit and whitespace</description>
        <errorConditionFormula>NOT(REGEX( Phone__c , &quot;^[0-9 ]+$&quot;))</errorConditionFormula>
        <errorMessage>Phone should contains only digit and whitespace</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_Suffix_Validation</fullName>
        <active>true</active>
        <description>Email of Candidate only available if it end with suffix @mulodo.com or @gmail.com</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Email__c)),
NOT(OR(REGEX( Email__c ,&quot;\\w([^@\\s,;]+)@(mulodo\\.com)&quot;),
             REGEX( Email__c ,&quot;\\w([^@\\s,;]+)@(gmail\\.com)&quot;))
      )
)</errorConditionFormula>
        <errorMessage>Email of Candidate only available if it end with suffix @mulodo.com or @gmail.com</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Length_Validate</fullName>
        <active>true</active>
        <description>Phone Length should be between 10 and 11 number</description>
        <errorConditionFormula>LEN(SUBSTITUTE(Phone__c,&quot; &quot;,&quot;&quot;)) &lt;10 || LEN(SUBSTITUTE(Phone__c, &quot; &quot;,&quot;&quot;)) &gt; 11</errorConditionFormula>
        <errorMessage>Phone Length should be between 10 and 11 number</errorMessage>
    </validationRules>
</CustomObject>